# autome

./: README.md  pyproject.toml
autome/: __init__.py  __main__.py  base_machine.py  finite_automata.py  machine.py  nd_finite_automata.py  parsers.py  state.py  tape.py  transition.py  utils.py
autome/automatas/: __init__.py
autome/finite_automata/: __init__.py  machine.py  parsers.py  state.py  transition.py
autome/grammars/: __init__.py  cfg.py  cfg_c.py
autome/interface/: __init__.py  lexer.py  lexico.py  parser.py  sintaxo.py
autome/regex/: __init__.py  interpreter.py  lexer.py  nodes.py  parser.py  regex.py
autome/regular_expression/: __init__.py  interpreter.py  lexer.py  nodes.py  parser.py  regex.py
autome/turing_machine/: machine.py  parsers.py  state.py  tape.py  transition.py
autome/utils/: enums.py  (+1 more)
formats/: lexico.json  simple.automata.json  simple.code  super_simple.json
machines/: 01-machine.json  01-machine.parsed.jff  copy_machine.json  cross-machine.jff  cross-machine.json  deterministic-cross-machine.json  even-1-machine.json  machine.jff  nd-machine.jff  u-machine.parsed.jff
tests/: test_autome.py  test_concatenation_automata.py  test_copy_machine.py  test_dfa_parsing.py  test_fda_intersection.py  test_fda_parsing.py  test_jff_parsing.py  test_json_parsing.py  test_kleene_automata.py  test_multiply_machine.py  test_ndfa_to_dfa.py  test_non_deterministic_machine.py  test_parity_finite_automata.py  test_regex_interpreter.py  test_regex_lexer.py  test_regex_match.py  test_regex_parser.py  test_symbol_automata.py  test_union_automata.py
(+26 files in other folders)
