[tool.poetry]
name = "autome"
version = "0.1.0"
description = "Automata simulation with Python"
authors = ["João Vitor Maia <maia.tostring@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
